core/core-common/src/tests/models/snapshots/proton_core_common__models__tests__contact__contact_list__test_grouped_contacts_0.snap
---
source: core/core-common/src/tests/models/contact.rs
expression: display_group(groups)
---
0 keys:
