core/core-common/src/tests/models/snapshots/proton_core_common__models__tests__contact__contact_list__test_grouped_contacts_3.snap
---
source: core/core-common/src/tests/models/contact.rs
expression: display_group(groups)
---
1 keys:

B (2 items)
Contact B (#3F8B8E): 🦊 Barbara Fox (0 addresses)
Contact B (#4F66DF): 🐂 Barbara Lox (0 addresses)
