core/core-common/src/tests/models/snapshots/proton_core_common__models__tests__contact__contact_list__test_grouped_contacts_4.snap
---
source: core/core-common/src/tests/models/contact.rs
expression: display_group(groups)
---
2 keys:

# (1 item)
Contact ? (#51BE50): 🙀 (0 addresses)

B (2 items)
Contact B (#4E7ABB): ❤️‍🔥 Barbara Fox (0 addresses)
Contact B (#4989FF): 🙀 Barbara Lox (0 addresses)
