core/core-common/src/tests/models/snapshots/proton_core_common__models__tests__contact__contact_list__test_grouped_contacts_5.snap
---
source: core/core-common/src/tests/models/contact.rs
expression: display_group(groups)
---
4 keys:

D (1 item)
Contact D (#A839A4): Dad (0 addresses)

F (1 item)
Group F (#A839A4): Family (0 addresses)

M (1 item)
Contact M (#213474): Mom (0 addresses)

S (1 item)
Contact S (#9C89FF): Sister (0 addresses)
